--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,7 +10,7 @@
     background-color: white;
     border: none;
     font-weight: 600;
-    font-size: 12px;
+    /* font-size: 12px; */
     cursor: pointer;
 }
 .drawerButton :hover{
@@ -27,5 +27,5 @@
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     border-radius: 12px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
